--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,18 +3,23 @@
   "name": "CastAlleys - Your Podcast Alleys",
   "icons": [
     {
-      "src": "favicon.ico",
-      "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "src": "favicon-32.png",
+      "sizes": "32x32",
+      "type": "image/png"
     },
     {
-      "src": "favicon.png",
-      "sizes": "864x864",
+      "src": "favicon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "favicon-512.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ],
   "start_url": ".",
   "display": "standalone",
-  "theme_color": "#ce0925",
-  "background_color": "#ffffff"
+  "theme_color": "#ffffff",
+  "background_color": "#ffbd3b"
 }
